# cgen

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  COVERAGE.md  IMPLEMENTATION_PLAN.md  Makefile  PIPELINE_STATUS.md  README.md  STC_INTEGRATION_DESIGN.md  pyproject.toml  pytest.ini  test_complete.c  test_factorial.c  test_factorial_v2.c  test_final.c  test_makefilegen.c  test_makefilegen.py  test_simple_factorial.py  workbook.leo
.github/workflows/: python-package.yml  release.yml  test.yml
doc/: 3-layers.md  COVERAGE.md  IMPLEMENTATION_PLAN.md  INTELLIGENCE_LAYER_SUMMARY.md  STC_INTEGRATION_ARCHITECTURE.md  STC_INTEGRATION_DESIGN.md  cgen-pipeline.md  codegen_metaprogramming.py  py2c_analysis.md  py2c_practical_limits.md  revolutionary_synthesis.md  synthesis.md  three_layer_architecture.md
examples/: complete_pipeline_with_integrated_generator.py  complete_working_example.py  comprehensive_example.py  control_flow_demo.py  convert_text_analyzer.py  convert_text_analyzer_simple.py  game_of_life.c  game_of_life_final.c  game_of_life_fixed.c  game_of_life_phase5.c  game_of_life_stc.c  game_of_life_test.c  intelligence_analysis_demo.py  math_expression_parser.py  minimal_working_demo.py  phase6_1_demo.py  python_to_c_example.py  simple_complete_example.py  simple_math_calculator.c  simple_math_calculator_new.c  simple_math_calculator_phase5.c  simple_test.py  stc_basic_demo.py  stc_demo.py  stc_integration_demo.py  string_methods_test.py  test_control_flow.py  test_formal_verification.py  test_integrated_generator.py  test_simple_slice.py  test_string_membership_simple.py  test_string_methods.py  test_string_methods_new.py  text_analyzer.py  text_analyzer_advanced.py  text_analyzer_minimal.py  text_analyzer_simple.py  working_pipeline_example.py
scripts/: batch_convert.py  convert_unittest_to_pytest.py  demo_frontend.py  phase7_generator.py  prototype_advanced_py2c.py  run_tests.py
src/cfile/: __init__.py  core.py  factory.py  py2c.py  style.py  writer.py
src/cgen/: __init__.py  __main__.py  pipeline.py
src/cgen/builder/: __init__.py  makefilegen.py
src/cgen/cli/: __init__.py  enhanced_main.py  main.py  py2c.py  simple_cli.py
src/cgen/core/: __init__.py  core.py  factory.py  py2c.py  stc_py2c.py  style.py  writer.py
src/cgen/ext/: __init__.py
src/cgen/ext/stc/: __init__.py  allocators.py  containers.py  enhanced_memory_manager.py  enhanced_translator.py  enhanced_type_inference.py  memory_manager.py  nested_containers.py  smart_pointers.py  template_manager.py  translator.py
src/cgen/extensions/: __init__.py
src/cgen/frontend/: __init__.py  ast_analyzer.py  base.py  constraint_checker.py  flow_sensitive_inference.py  static_ir.py  subset_validator.py  type_inference.py
src/cgen/frontend/generators/: ast_translator.py  simple_translator.py  stc_enhanced_translator.py
src/cgen/frontend/optimizers/: __init__.py  compile_time_evaluator.py  function_specializer.py  vectorization_detector.py
src/cgen/frontend/verifiers/: __init__.py  performance_analyzer.py  theorem_prover.py
src/cgen/generator/: LICENSE  __init__.py  core.py  factory.py  module_system.py  py2c.py  simple_emitter.py  stc_integration.py  stc_py2c.py  writer.py
src/cgen/intelligence/: __init__.py  base.py
src/cgen/intelligence/analyzers/: __init__.py  bounds_checker.py  call_graph.py  static_analyzer.py  symbolic_executor.py
src/cgen/intelligence/generators/: __init__.py  simple_translator.py
src/cgen/intelligence/optimizers/: __init__.py  loop_analyzer.py
src/cgen/intelligence/verifiers/: __init__.py  bounds_prover.py  correctness_prover.py
src/cgen/runtime/: Makefile  __init__.py  cgen_container_ops.c  cgen_container_ops.h  cgen_error_handling.c  cgen_error_handling.h  cgen_file_ops.c  cgen_file_ops.h  cgen_memory_ops.c  cgen_memory_ops.h  cgen_python_ops.c  cgen_python_ops.h  cgen_stc_bridge.c  cgen_stc_bridge.h  cgen_string_ops.c  cgen_string_ops.h  test_runtime.c
tests/: __init__.py  benchmarks.py  conftest.py  test_additional_operators.py  test_c11_features.py  test_cli.py  test_comprehensive_parameters.py  test_control_flow_elements.py  test_demos.py  test_enhanced_cli.py  test_flow_sensitive_inference.py  test_formal_verification.py  test_frontend.py  test_integrated_generator.py  test_intelligence_bounds_checker.py  test_intelligence_call_graph.py  test_intelligence_compile_time_evaluator.py  test_intelligence_function_specializer.py  test_intelligence_loop_analyzer.py  test_intelligence_static_analyzer.py  test_intelligence_symbolic_executor.py  test_intelligence_vectorization_detector.py  test_makefilegen.py  test_makefilegen_with_main.py  test_mini_integration.py  test_parameter_modification.py  test_pipeline_core.py  test_pipeline_limitations.py  test_py2c.py  test_py2c_pytest.py  test_simple.py  test_smart_pointers_allocators.py  test_stc_integration.py  test_tier1_operators.c  test_tier2_elements.py  test_tier3_elements.py  test_tier4_elements.py  test_writer.py
tests/demos/: README.md  class.py  complete_working_example.py  demo_intelligence_layer.py  forward_declared_struct.py  game_of_life.py  game_of_life_stc.py  intelligence_analysis_demo.py  optimization_showcase.py  performance_benefits.py  practical_demo_program.py  simple_complete_example.py  simple_demo.py  simple_math_calculator.py  simple_text_processor.py  smart_pointers_allocators_demo.py  stc_integration_demo.py  struct_initializer.py  text_analyzer_basic.py  tier2_demonstration.py  typedef_header.py
tests/mini/: mini_py2c.py  mini_py2c_classes.py  mini_py2c_module.py
tests/translation/: container_iteration_test.py  test_container_iteration.py  test_control_flow.py  test_list_slicing.py  test_math_import.py  test_simple_slice.py  test_simple_string_ops.py  test_string_membership.py  test_string_membership_simple.py  test_string_methods_new.py  test_string_split_simple.py
